--- a/net.greenbeansit.timer/war/Net_greenbeansit_timer.css
+++ b/net.greenbeansit.timer/war/Net_greenbeansit_timer.css
@@ -10,6 +10,11 @@ h1 {
   text-align: center;
 }
 
+div
+{
+	overflow: visible;
+}
+
 .sendButton {
   display: block;
   font-size: 16pt;
@@ -35,5 +40,5 @@ h1 {
 
 html, body
 {
-	overflow: visible;
+	overflow: auto;
 }
