--- a/JobTracker/src/main/webapp/JobTracker.css
+++ b/JobTracker/src/main/webapp/JobTracker.css
@@ -2,6 +2,10 @@
 
 
 /** Example rules used by the template application (remove for your app) */
+body{
+	background-color::#f4f4f1;
+}
+
 h1 {
   font-size: 2em;
   font-weight: bold;
@@ -41,5 +45,8 @@ div
 html, body
 {
 	overflow: auto;
+	background-color:#f4f4f1;
 }
+
+
 
