--- a/JobTracker/.settings/org.eclipse.wst.common.component
+++ b/JobTracker/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="JobTracker">
+    <wb-module deploy-name="client">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
@@ -7,7 +7,7 @@
         <dependent-module archiveName="shared-0.0.1.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/shared/shared">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <property name="java-output-path" value="/JobTracker/target/classes"/>
+        <property name="java-output-path" value="/client/target/classes"/>
         <property name="context-root" value="client"/>
     </wb-module>
 </project-modules>
