--- a/JobTracker/war/JobTracker.css
+++ b/JobTracker/war/JobTracker.css
@@ -2,12 +2,21 @@
 
 
 /** Example rules used by the template application (remove for your app) */
+body{
+	background-color::#f4f4f1;
+}
+
 h1 {
   font-size: 2em;
   font-weight: bold;
   color: #777777;
   margin: 40px 0px 70px;
   text-align: center;
+}
+
+div
+{
+	overflow: visible;
 }
 
 .sendButton {
@@ -32,8 +41,12 @@ h1 {
 #closeButton {
   margin: 15px 6px 6px;
 }
+
 html, body
 {
 	overflow: auto;
 	background-color:#f4f4f1;
 }
+
+
+
