--- a/JobTracker.backend/.settings/org.eclipse.wst.common.component
+++ b/JobTracker.backend/.settings/org.eclipse.wst.common.component
@@ -5,6 +5,8 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
         <dependent-module archiveName="shared-0.0.1.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/shared/shared">
             <dependency-type>uses</dependency-type>
         </dependent-module>
