--- a/JobTracker/src/main/webapp/JobTracker.css
+++ b/JobTracker/src/main/webapp/JobTracker.css
@@ -1,52 +1,45 @@
 /** Add css rules here for your application. */
-
-
 /** Example rules used by the template application (remove for your app) */
-body{
-	background-color::#f4f4f1;
+body {
+	background-color: :#f4f4f1;
+	overflow: visible;
 }
 
 h1 {
-  font-size: 2em;
-  font-weight: bold;
-  color: #777777;
-  margin: 40px 0px 70px;
-  text-align: center;
+	font-size: 2em;
+	font-weight: bold;
+	color: #777777;
+	margin: 40px 0px 70px;
+	text-align: center;
 }
 
-div
-{
+div {
 	overflow: visible;
 }
 
 .sendButton {
-  display: block;
-  font-size: 16pt;
+	display: block;
+	font-size: 16pt;
 }
 
 /** Most GWT widgets already have a style name defined */
 .gwt-DialogBox {
-  width: 400px;
+	width: 400px;
 }
 
 .dialogVPanel {
-  margin: 5px;
+	margin: 5px;
 }
 
 .serverResponseLabelError {
-  color: red;
+	color: red;
 }
 
 /** Set ids using widget.getElement().setId("idOfElement") */
 #closeButton {
-  margin: 15px 6px 6px;
+	margin: 15px 6px 6px;
 }
 
-html, body
-{
-	overflow: auto;
-	background-color:#f4f4f1;
+html {
+	background-color: #f4f4f1;
 }
-
-
-
