--- a/JobTracker/src/net/greenbeansit/jobtracker/client/components/widgets/calendar/css/CalendarTimeInput.css
+++ b/JobTracker/src/net/greenbeansit/jobtracker/client/components/widgets/calendar/css/CalendarTimeInput.css
@@ -9,7 +9,25 @@
 }
 
 .book {
-	
+	background-color: orange;
+	color: white;
+	font-family: arial;
+	font-size: 15px;
+}
+.book:HOVER{
+	background-color: orange;
+	color: white;
+	transform:scale(1.1, 1.1);
+}
+
+.line {
+	color: black;
+	background-color: white;
+	font-size: 1em;
+	padding: auto;
+	vertical-align: middle;
+	padding-left: 0px;
+	margin-left: 0px;
 }
 
 .eventButton {
@@ -18,20 +36,27 @@
 }
 
 .textInput {
-	border:0;
-	outline:0;
-	background-color:white;
-	margin-top:auto;
-	margin-bottom:auto;	
-	width:100%;
-	height:100%;
-	
+	-webkit-box-shadow: 0px 0px 0px 0px;
+	-moz-box-shadow: 0px 0px 0px 0px;
+	box-shadow: 0px 0px 0px 0px;
+	border: 0;
+	outline: 0;
+	background-color: white;
+	margin-top: auto;
+	margin-bottom: auto;
+	width: 100%;
+	padding-left: 0px;
+	padding-right: 0px;
+	margin-left: 0px;
+	margin-right: 0px;
+	height: 100%;
 }
-.columnfield{
-	border:2px solid #DCDCDC;
-	border-radius:5px;
-	
+
+.columnfield {
+	border: 1px solid #DCDCDC;
+	border-radius: 5px;
 }
+
 .buttonLeft {
 	float: right;
 }
@@ -47,13 +72,14 @@
 	padding: 0;
 	border: none;
 	margin: 0;
+	margin-top: auto;
 }
 
 .text {
 	line-height: 0px;
 	text-align: center;
 	padding: 0;
-	font-size:15px;
+	font-size: 15px;
 	border: none;
 	background-color: white;
 	color: #DCDCDC;
