--- a/JobTracker/src/net/greenbeansit/jobtracker/client/components/widgets/calendar/css/CalendarTimeInput.css
+++ b/JobTracker/src/net/greenbeansit/jobtracker/client/components/widgets/calendar/css/CalendarTimeInput.css
@@ -8,17 +8,7 @@
 	float: left;
 }
 
-.book {
-	background-color: orange;
-	color: white;
-	font-family: arial;
-	font-size: 15px;
-}
-.book:HOVER{
-	background-color: orange;
-	color: white;
-	transform:scale(1.1, 1.1);
-}
+
 
 .line {
 	color: black;
@@ -30,40 +20,22 @@
 	margin-left: 0px;
 }
 
-.eventButton {
-	border-radius: 100%;
-	visibility: hidden;
-}
 
-.textInput {
-	-webkit-box-shadow: 0px 0px 0px 0px;
-	-moz-box-shadow: 0px 0px 0px 0px;
-	box-shadow: 0px 0px 0px 0px;
-	border: 0;
-	outline: 0;
-	background-color: white;
-	margin-top: auto;
-	margin-bottom: auto;
-	width: 100%;
-	padding-left: 0px;
-	padding-right: 0px;
-	margin-left: 0px;
-	margin-right: 0px;
-	height: 100%;
-}
 
 .columnfield {
 	border: 1px solid #DCDCDC;
 	border-radius: 5px;
 }
 
+
+
+
+
 .buttonLeft {
 	float: right;
 }
 
-.eventButton, .book {
-	margin-top: 2em;
-}
+
 
 .buttonLeft, .buttonRight {
 	font-size: 10px;
@@ -83,4 +55,44 @@
 	border: none;
 	background-color: white;
 	color: #DCDCDC;
+}
+
+
+
+
+.textInput {
+	height: 43px;
+}
+.textInputTime {
+	height: 
+}
+.buttonCenter {
+	border-radius: 0 !important;
+}
+.buttonLeftEndTop {
+	border-radius: 0px 4px 0px 0px !important;
+}
+.buttonLeftEndBottom {
+	border-radius: 0px 0px 4px 0px !important;
+}
+.row {
+	margin: 10px 0px;
+	padding: 0;
+}
+.noPadding {
+	padding: 0;
+}
+.addonLeft {
+	width: 95px;
+}
+
+.eventButton {
+	border-radius: 100%;
+	display: none;
+}
+
+.buttonRow {
+	margin: 0;
+	padding: 0;
+	float: right;
 }
