implement horizontal barCharts for CapacityPage

--- a/JobTracker/src/net/greenbeansit/jobtracker/client/components/widgets/calendar/css/Calendar.css
+++ b/JobTracker/src/net/greenbeansit/jobtracker/client/components/widgets/calendar/css/Calendar.css
@@ -71,3 +71,26 @@ td {
 	background-color: orange;
 	
 }
+
+.weeklyUtilization {
+	height: 100%;
+	width: 100%;
+	margin-top: 75px;
+	text-align: left;
+}
+
+.barChartHorizontal {
+	width: 7px;
+	text-align: center;
+	display: inline-block;
+	background-color: #00AAAA;
+	border-radius: 25px;
+}
+
+.barChartHeightHorizontal {
+	width: 7px;
+	text-align: center;
+	display: inline-block;
+	background-color: #ff8c00;
+	border-radius: 25px;
+}
