--- a/JobTracker/src/main/webapp/JobTracker.css
+++ b/JobTracker/src/main/webapp/JobTracker.css
@@ -1,7 +1,7 @@
 /** Add css rules here for your application. */
 /** Example rules used by the template application (remove for your app) */
 body {
-	background-color: :#f4f4f1;
+	background-color: #f4f4f1;
 	overflow: visible;
 }
 
