--- a/JobTracker/src/net/greenbeansit/jobtracker/client/components/widgets/calendar/css/CalendarUtilization.css
+++ b/JobTracker/src/net/greenbeansit/jobtracker/client/components/widgets/calendar/css/CalendarUtilization.css
@@ -22,12 +22,13 @@
 }
 
 .button-Day-current {
+	color:white;
 	width: 5px;
 	text-align: center;
-	padding-right: 23px;
-	background-color: rgba(238 ,0 ,0,0.5 );
+	padding-right: 20px;
+	background-color: rgba(171 ,171 ,171,0.7);
 	border: none;
-	border-radius: 20px;
+	border-radius: 30px;
 }
 .label-week{
 	opacity:1;
@@ -61,10 +62,15 @@ td {
 	border-radius: 10px;
 }
 
-.button-Day:HOVER, .button-Day-current:HOVER{
+.button-Day:HOVER{
 	border-radius:50px;
-	background-color: rgba(180,205,205,0.5);
+	border-color:rgb(255,0,0);
 	
+}
+.button-Day-current:HOVER{
+	
+	border-radius:50px;
+	background-color: rgba(238 ,0 ,0,0.5 );
 }
 .button-Day:FOCUS {
 
