--- a/JobTracker/src/net/greenbeansit/jobtracker/client/components/widgets/calendar/css/CalendarTimeLine.css
+++ b/JobTracker/src/net/greenbeansit/jobtracker/client/components/widgets/calendar/css/CalendarTimeLine.css
@@ -12,10 +12,31 @@
 
 .button-current {
 	background-color: grey;
-	color:grey;
+	color: grey;
 	border-color: grey;
 }
 
 .button-not-current {
 	background-color: white;
+}
+
+.textWeek {
+	font-size: 20px;
+	text-align: right;
+	vertical-align: bottom;
+	margin: 10px;
+	font-style: italic;
+	line-height: 40px
+}
+
+.textDate {
+	font-size: 25px;
+	text-align: right;
+	vertical-align: bottom;
+	margin: 10px;
+	line-height: 40px
+}
+
+.textContainer {
+	float: right;
 }
