--- a/JobTracker/src/net/greenbeansit/jobtracker/client/components/widgets/calendar/css/CalendarUtilization.css
+++ b/JobTracker/src/net/greenbeansit/jobtracker/client/components/widgets/calendar/css/CalendarUtilization.css
@@ -75,6 +75,13 @@ td {
 	border-radius: 10px;
 }
 
+.barChartBlue {
+	
+	width: 7px;
+	display: inline-block;
+	background-color: rgb(0,0,255);
+	border-radius: 10px;
+}
 .button-Day:HOVER{
 	border-radius:50px;
 	border-color:rgb(255,0,0);
