--- a/JobTracker/src/net/greenbeansit/jobtracker/client/components/widgets/calendar/css/CalendarUtilization.css
+++ b/JobTracker/src/net/greenbeansit/jobtracker/client/components/widgets/calendar/css/CalendarUtilization.css
@@ -79,7 +79,7 @@ td {
 	
 	width: 7px;
 	display: inline-block;
-	background-color: rgb(0,0,255);
+	background-color: #000099;
 	border-radius: 10px;
 }
 .button-Day:HOVER{
